Add Linux support (Tested on Ubuntu 20.04 WSL) Add en dotnet result texts

--- a/RecursiveNuGetSecurityChecker/appsettings.json
+++ b/RecursiveNuGetSecurityChecker/appsettings.json
@@ -1,13 +1,14 @@
 ﻿{
   "Paths": [
-    "C:\\Users\\USERNAME\\source\\repos"
+    "C:\\Users\\Dietmar\\source\\repos"
+    //"/mnt/c/Users/Dietmar/source/repos/"
   ],
   "NugetCheckerResultCheckTexts": {
-    "Passed": [ "liegen gemäß den aktuellen Quellen keine anfälligen Pakete vor." ],
-    "NotSupported": [ "Projekten mit Paketverweis" ]
+    "Passed": [ "liegen gemäß den aktuellen Quellen keine anfälligen Pakete vor.", "has no vulnerable packages given the current sources" ],
+    "NotSupported": [ "Projekten mit Paketverweis", "while the command works only with package reference projects" ]
   },
   "FileName": "foundings.txt",
-  "ReportHour": 5,
+  //"ReportHour": 5,
   "DiscordWebHookUrl": "",
   "TeamsWebHookUrl": "",
   "Serilog": {
@@ -19,6 +20,15 @@
       }
     },
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "WriteTo": [ "Console" ]
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "pathFormat": "logs\\log-{Date}.txt",
+          "retainedFileCountLimit": "7"
+        }
+      },
+      { "Name": "Console" }
+    ]
   }
 }
